--- a/index.html
+++ b/index.html
@@ -5,32 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mod Categorizer</title>
     <style>
+        /* General Reset */
         body {
+            margin: 0;
             font-family: Arial, sans-serif;
-            margin: 20px;
-            text-align: center;
+            background-color: #1e1e1e;
+            color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
+
         h1 {
-            color: #333;
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #00d8ff;
         }
+
+        p {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            color: #c8c8c8;
+        }
+
+        #fileInput {
+            padding: 10px;
+            background-color: #282c34;
+            color: #f5f5f5;
+            border: 1px solid #00d8ff;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+        }
+
+        #fileInput:hover {
+            background-color: #3b4048;
+        }
+
         #results {
-            margin-top: 20px;
+            margin-top: 2rem;
+            width: 80%;
+            max-width: 800px;
             text-align: left;
         }
+
+        h3 {
+            font-size: 1.5rem;
+            margin-top: 1rem;
+            color: #00d8ff;
+        }
+
         ul {
             list-style-type: none;
             padding: 0;
         }
+
         li {
-            margin: 5px 0;
+            padding: 8px 10px;
+            background-color: #2c2c2c;
+            margin-bottom: 5px;
+            border-radius: 5px;
+            border-left: 4px solid #00d8ff;
+        }
+
+        li:hover {
+            background-color: #3b3b3b;
+        }
+
+        footer {
+            margin-top: auto;
+            padding: 1rem;
+            font-size: 0.9rem;
+            color: #757575;
+            text-align: center;
+        }
+
+        footer a {
+            color: #00d8ff;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <h1>Mod Categorizer</h1>
-    <p>Upload your modlist.html file to categorize mods:</p>
+    <p>Upload the <strong>modlist.html</strong> from any CurseForge modpack to narrow down what mods are client-sided:</p>
     <input type="file" id="fileInput" accept=".html">
     <div id="results"></div>
+    <footer>
+        Built with <span>&hearts;</span> for Minecraft modders. <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a>
+    </footer>
 
     <script>
         let config = {};
