--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,11 @@
             color: #f5f5f5;
             display: flex;
             flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
+			justify-content: flex-start;
+			padding: 20px;
+			min-height: 100vh;
+			box-sizing: border-box;
+		}
 
         h1 {
             font-size: 2.5rem;
@@ -44,54 +46,57 @@
             background-color: #3b4048;
         }
 
-        #results {
-            margin-top: 2rem;
-            width: 80%;
-            max-width: 800px;
-            text-align: left;
-        }
+    #results {
+        margin-top: 2rem;
+        width: 90%;
+        max-width: 1200px;
+        text-align: left;
+        overflow: hidden;
+    }
 
-        h3 {
-            font-size: 1.5rem;
-            margin-top: 1rem;
-            color: #00d8ff;
+    h3 {
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        color: #00d8ff;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        max-height: 300px; /* Limit height */
+        overflow-y: auto; /* Enable scrolling */
+        border: 1px solid #00d8ff;
+        border-radius: 5px;
+        background-color: #2c2c2c;
+    }
+
+    li {
+        padding: 8px 10px;
+        margin: 2px 0;
+        background-color: #2c2c2c;
+        border-bottom: 1px solid #3b3b3b;
+    }
+
+    li:last-child {
+        border-bottom: none;
+    }
+
+    li:hover {
+        background-color: #3b3b3b;
+    }
+
+    @media (max-width: 768px) {
+        h1 {
+            font-size: 2rem;
         }
 
         ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        li {
-            padding: 8px 10px;
-            background-color: #2c2c2c;
-            margin-bottom: 5px;
-            border-radius: 5px;
-            border-left: 4px solid #00d8ff;
-        }
-
-        li:hover {
-            background-color: #3b3b3b;
-        }
-
-        footer {
-            margin-top: auto;
-            padding: 1rem;
-            font-size: 0.9rem;
-            color: #757575;
-            text-align: center;
-        }
-
-        footer a {
-            color: #00d8ff;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
+            max-height: 200px; /* Adjust for smaller screens */
         }
     </style>
 </head>
+
 <body>
     <h1>Mod Categorizer</h1>
     <p>Upload the <strong>modlist.html</strong> from any CurseForge modpack to narrow down what mods are client-sided:</p>
@@ -195,4 +200,5 @@
         window.onload = loadConfig;
     </script>
 </body>
+
 </html>
