--- a/index.html
+++ b/index.html
@@ -2,202 +2,207 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mod Categorizer</title>
     <style>
         /* General Reset */
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #1e1e1e;
-            color: #f5f5f5;
-            display: flex;
-            flex-direction: column;
-			justify-content: flex-start;
-			padding: 20px;
-			min-height: 100vh;
-			box-sizing: border-box;
-		}
+                  body {
+                      margin: 0;
+                      font-family: Arial, sans-serif;
+                      background-color: #1e1e1e;
+                      color: #f5f5f5;
+                      display: flex;
+                      flex-direction: column;
+            	justify-content: flex-start;
+            	padding: 20px;
+            	min-height: 100vh;
+            	box-sizing: border-box;
+            }
 
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-            color: #00d8ff;
-        }
+                  h1 {
+                      font-size: 2.5rem;
+                      margin-bottom: 1rem;
+                      color: #00d8ff;
+                  }
 
-        p {
-            font-size: 1.2rem;
-            margin-bottom: 2rem;
-            color: #c8c8c8;
-        }
+                  p {
+                      font-size: 1.2rem;
+                      margin-bottom: 2rem;
+                      color: #c8c8c8;
+                  }
 
-        #fileInput {
-            padding: 10px;
-            background-color: #282c34;
-            color: #f5f5f5;
-            border: 1px solid #00d8ff;
-            border-radius: 5px;
-            font-size: 1rem;
-            cursor: pointer;
-        }
+                  #fileInput {
+                      padding: 10px;
+                      background-color: #282c34;
+                      color: #f5f5f5;
+                      border: 1px solid #00d8ff;
+                      border-radius: 5px;
+                      font-size: 1rem;
+                      cursor: pointer;
+                  }
 
-        #fileInput:hover {
-            background-color: #3b4048;
-        }
+                  #fileInput:hover {
+                      background-color: #3b4048;
+                  }
 
-    #results {
-        margin-top: 2rem;
-        width: 90%;
-        max-width: 1200px;
-        text-align: left;
-        overflow: hidden;
-    }
+              #results {
+                  margin-top: 2rem;
+                  width: 90%;
+                  max-width: 1200px;
+                  text-align: left;
+                  overflow: hidden;
+              }
 
-    h3 {
-        font-size: 1.5rem;
-        margin-top: 1rem;
-        color: #00d8ff;
-    }
+              h3 {
+                  font-size: 1.5rem;
+                  margin-top: 1rem;
+                  color: #00d8ff;
+              }
 
-    ul {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        max-height: 300px; /* Limit height */
-        overflow-y: auto; /* Enable scrolling */
-        border: 1px solid #00d8ff;
-        border-radius: 5px;
-        background-color: #2c2c2c;
-    }
+              ul {
+                  list-style-type: none;
+                  padding: 0;
+                  margin: 0;
+                  max-height: 300px; /* Limit height */
+                  overflow-y: auto; /* Enable scrolling */
+                  border: 1px solid #00d8ff;
+                  border-radius: 5px;
+                  background-color: #2c2c2c;
+              }
 
-    li {
-        padding: 8px 10px;
-        margin: 2px 0;
-        background-color: #2c2c2c;
-        border-bottom: 1px solid #3b3b3b;
-    }
+              li {
+                  padding: 8px 10px;
+                  margin: 2px 0;
+                  background-color: #2c2c2c;
+                  border-bottom: 1px solid #3b3b3b;
+              }
 
-    li:last-child {
-        border-bottom: none;
-    }
+              li:last-child {
+                  border-bottom: none;
+              }
 
-    li:hover {
-        background-color: #3b3b3b;
-    }
+              li:hover {
+                  background-color: #3b3b3b;
+              }
 
-    @media (max-width: 768px) {
-        h1 {
-            font-size: 2rem;
-        }
+              @media (max-width: 768px) {
+                  h1 {
+                      font-size: 2rem;
+                  }
 
-        ul {
-            max-height: 200px; /* Adjust for smaller screens */
-        }
+                  ul {
+                      max-height: 200px; /* Adjust for smaller screens */
+                  }
     </style>
 </head>
 
 <body>
     <h1>Mod Categorizer</h1>
     <p>Upload the <strong>modlist.html</strong> from any CurseForge modpack to narrow down what mods are client-sided:</p>
-    <input type="file" id="fileInput" accept=".html">
+    <input type="file" id="fileInput" accept=".html" />
     <div id="results"></div>
-    <footer>
-        Built with <span>&hearts;</span> for Minecraft modders. <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a>
-    </footer>
+    <footer>Built with <span>&hearts;</span> for Minecraft modders. <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a></footer>
 
     <script>
         let config = {};
 
-        const simplifyName = (name) => name.toLowerCase().replace(/[-_]/g, '').trim();
+const simplifyName = (name) => name.toLowerCase().replace(/[-_]/g, "").trim();
 
-        const categorizeMods = (mods) => {
-            const categories = {
-                "Known": [],
-                "High Probability": [],
-                "Medium Probability": [],
-                "Low Probability": [],
-                "Unknown": [],
-                "Not": []
+const categorizeMods = (mods) => {
+    const categories = {
+        Known: [],
+        "High Probability": [],
+        "Medium Probability": [],
+        "Low Probability": [],
+        Unknown: [],
+        Not: [],
+    };
+
+    mods.forEach((mod) => {
+        const simplifiedName = simplifyName(mod);
+        let categorized = false;
+
+        for (const [category, keywords] of Object.entries(config)) {
+            // Simplify each keyword in the config
+            if (keywords.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+                const displayCategory =
+                    category === "High" || category === "Medium" || category === "Low"
+                        ? `${category} Probability`
+                        : category;
+                categories[displayCategory].push(mod);
+                categorized = true;
+                break;
+            }
+        }
+
+        if (!categorized) {
+            categories["Unknown"].push(mod);
+        }
+    });
+
+    return categories;
+};
+
+
+            const parseModlist = (fileContent) => {
+                const parser = new DOMParser();
+                const doc = parser.parseFromString(fileContent, "text/html");
+                return Array.from(doc.querySelectorAll("li a")).map((a) => {
+                    // Extract the href attribute and split the URL by '/' to get the mod name
+                    const href = a.getAttribute("href");
+                    const segments = href.split("/");
+                    const modName = segments[segments.length - 1]; // Get the last segment of the URL
+                    return modName;
+                });
             };
 
-            mods.forEach((mod) => {
-                const simplifiedName = simplifyName(mod);
-                let categorized = false;
+            const displayResults = (categories) => {
+                const resultsDiv = document.getElementById("results");
+                resultsDiv.innerHTML = "";
 
-                for (const [category, keywords] of Object.entries(config)) {
-                    if (keywords.some((keyword) => simplifiedName.includes(keyword))) {
-                        const displayCategory = category === "High" || category === "Medium" || category === "Low"
-                            ? `${category} Probability`
-                            : category;
-                        categories[displayCategory].push(mod);
-                        categorized = true;
-                        break;
-                    }
+                for (const [category, mods] of Object.entries(categories)) {
+                    const categoryDiv = document.createElement("div");
+                    categoryDiv.innerHTML = `<h3>${category}</h3>`;
+                    const ul = document.createElement("ul");
+
+                    mods.forEach((mod) => {
+                        const li = document.createElement("li");
+                        li.textContent = mod;
+                        ul.appendChild(li);
+                    });
+
+                    categoryDiv.appendChild(ul);
+                    resultsDiv.appendChild(categoryDiv);
                 }
+            };
 
-                if (!categorized) {
-                    categories["Unknown"].push(mod);
+            const loadConfig = async () => {
+                try {
+                    const response = await fetch("config.json");
+                    if (!response.ok) throw new Error(`Failed to load config: ${response.statusText}`);
+                    config = await response.json();
+                    console.log("Config loaded:", config);
+                } catch (error) {
+                    console.error(error);
+                    alert("Failed to load configuration file.");
+                }
+            };
+
+            document.getElementById("fileInput").addEventListener("change", (event) => {
+                const file = event.target.files[0];
+                if (file) {
+                    const reader = new FileReader();
+                    reader.onload = () => {
+                        const mods = parseModlist(reader.result);
+                        const categories = categorizeMods(mods);
+                        displayResults(categories);
+                    };
+                    reader.readAsText(file);
                 }
             });
 
-            return categories;
-        };
-
-        const parseModlist = (fileContent) => {
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(fileContent, "text/html");
-            return Array.from(doc.querySelectorAll("li")).map((li) =>
-                li.textContent.split("(")[0].trim()
-            );
-        };
-
-        const displayResults = (categories) => {
-            const resultsDiv = document.getElementById("results");
-            resultsDiv.innerHTML = "";
-
-            for (const [category, mods] of Object.entries(categories)) {
-                const categoryDiv = document.createElement("div");
-                categoryDiv.innerHTML = `<h3>${category}</h3>`;
-                const ul = document.createElement("ul");
-
-                mods.forEach((mod) => {
-                    const li = document.createElement("li");
-                    li.textContent = mod;
-                    ul.appendChild(li);
-                });
-
-                categoryDiv.appendChild(ul);
-                resultsDiv.appendChild(categoryDiv);
-            }
-        };
-
-        const loadConfig = async () => {
-            try {
-                const response = await fetch("config.json");
-                if (!response.ok) throw new Error(`Failed to load config: ${response.statusText}`);
-                config = await response.json();
-                console.log("Config loaded:", config);
-            } catch (error) {
-                console.error(error);
-                alert("Failed to load configuration file.");
-            }
-        };
-
-        document.getElementById("fileInput").addEventListener("change", (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = () => {
-                    const mods = parseModlist(reader.result);
-                    const categories = categorizeMods(mods);
-                    displayResults(categories);
-                };
-                reader.readAsText(file);
-            }
-        });
-
-        window.onload = loadConfig;
+            window.onload = loadConfig;
     </script>
 </body>
 
