--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Mod Categorizer</h1>
-    <p>Upload the <strong>modlist.html</strong> from any CurseForge modpack to narrow down what mods are client-sided:</p>
+    <p>Upload the <strong>.zip</strong> file from any CurseForge modpack to narrow down what mods are client-sided:</p>
     <input type="file" id="fileInput" accept=".html" />
     <div id="results"></div>
 
@@ -19,133 +19,152 @@
         <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a>
     </footer>
 
-    <script>
-        let config = {};
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+<script>
+    let config = {};
 
-        const categoryDescriptions = {
-            Known: "These mods are explicitly marked as client-sided.",
-            "High Probability": "These mods are highly likely to be client-sided.",
-            "Medium Probability": "These mods might be client-sided.",
-            "Low Probability": "These mods are less likely to be client-sided.",
-            Unknown: "These mods could not be categorized.",
-            Not: "These mods are explicitly marked as not client-sided."
+    const categoryDescriptions = {
+        Known: "These mods are explicitly marked as client-sided.",
+        "High Probability": "These mods are highly likely to be client-sided.",
+        "Medium Probability": "These mods might be client-sided.",
+        "Low Probability": "These mods are less likely to be client-sided.",
+        Unknown: "These mods could not be categorized.",
+        Not: "These mods are explicitly marked as not client-sided."
+    };
+
+    const simplifyName = (name) => name.toLowerCase().replace(/[^a-z0-9]/g, "").trim();
+
+    const categorizeMods = (mods) => {
+        const categories = {
+            Known: [],
+            "High Probability": [],
+            "Medium Probability": [],
+            "Low Probability": [],
+            Unknown: [],
+            Not: [],
         };
 
-        const simplifyName = (name) => name.toLowerCase().replace(/[^a-z0-9]/g, "").trim();
+        mods.forEach((mod) => {
+            const simplifiedName = simplifyName(mod);
+            let categorized = false;
 
-        const categorizeMods = (mods) => {
-            const categories = {
-                Known: [],
-                "High Probability": [],
-                "Medium Probability": [],
-                "Low Probability": [],
-                Unknown: [],
-                Not: [],
-            };
+            // Check Known first
+            if (config.Known.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+                categories["Known"].push(mod);
+                categorized = true;
+            }
 
-            mods.forEach((mod) => {
-                const simplifiedName = simplifyName(mod);
-                let categorized = false;
+            // Check Not next
+            if (!categorized && config.Not.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+                categories["Not"].push(mod);
+                categorized = true;
+            }
 
-                // Check Known first
-                if (config.Known.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                    categories["Known"].push(mod);
-                    categorized = true;
-                }
-
-                // Check Not next
-                if (!categorized && config.Not.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                    categories["Not"].push(mod);
-                    categorized = true;
-                }
-
-                // Check other categories only if not already categorized
-                if (!categorized) {
-                    for (const [category, keywords] of Object.entries(config)) {
-                        if (category === "Known" || category === "Not") continue;
-                        if (keywords.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                            const displayCategory =
-                                category === "High" || category === "Medium" || category === "Low"
-                                    ? `${category} Probability`
-                                    : category;
-                            categories[displayCategory].push(mod);
-                            categorized = true;
-                            break;
-                        }
+            // Check other categories only if not already categorized
+            if (!categorized) {
+                for (const [category, keywords] of Object.entries(config)) {
+                    if (category === "Known" || category === "Not") continue;
+                    if (keywords.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+                        const displayCategory =
+                            category === "High" || category === "Medium" || category === "Low"
+                                ? `${category} Probability`
+                                : category;
+                        categories[displayCategory].push(mod);
+                        categorized = true;
+                        break;
                     }
                 }
-
-                // If no match, add to Unknown
-                if (!categorized) {
-                    categories["Unknown"].push(mod);
-                }
-            });
-
-            return categories;
-        };
-
-        const parseModlist = (fileContent) => {
-            const parser = new DOMParser();
-            const doc = parser.parseFromString(fileContent, "text/html");
-            return Array.from(doc.querySelectorAll("li a")).map((a) => {
-                const href = a.getAttribute("href");
-                const segments = href.split("/");
-                const modName = segments[segments.length - 1];
-                return modName;
-            });
-        };
-
-        const displayResults = (categories) => {
-            const resultsDiv = document.getElementById("results");
-            resultsDiv.innerHTML = "";
-
-            for (const [category, mods] of Object.entries(categories)) {
-                const categoryDiv = document.createElement("div");
-                categoryDiv.innerHTML = `
-                    <h3>${category}</h3>
-                    <p class="category-description">${categoryDescriptions[category]}</p>
-                `;
-
-                const ul = document.createElement("ul");
-
-                mods.forEach((mod) => {
-                    const li = document.createElement("li");
-                    li.textContent = mod;
-                    ul.appendChild(li);
-                });
-
-                categoryDiv.appendChild(ul);
-                resultsDiv.appendChild(categoryDiv);
             }
-        };
 
-        const loadConfig = async () => {
-            try {
-                const response = await fetch("config.json");
-                if (!response.ok) throw new Error(`Failed to load config: ${response.statusText}`);
-                config = await response.json();
-                console.log("Config loaded:", config);
-            } catch (error) {
-                console.error(error);
-                alert("Failed to load configuration file.");
-            }
-        };
-
-        document.getElementById("fileInput").addEventListener("change", (event) => {
-            const file = event.target.files[0];
-            if (file) {
-                const reader = new FileReader();
-                reader.onload = () => {
-                    const mods = parseModlist(reader.result);
-                    const categories = categorizeMods(mods);
-                    displayResults(categories);
-                };
-                reader.readAsText(file);
+            // If no match, add to Unknown
+            if (!categorized) {
+                categories["Unknown"].push(mod);
             }
         });
 
-        window.onload = loadConfig;
-    </script>
+        return categories;
+    };
+
+    const parseModlist = (fileContent) => {
+        const parser = new DOMParser();
+        const doc = parser.parseFromString(fileContent, "text/html");
+        return Array.from(doc.querySelectorAll("li a")).map((a) => {
+            const href = a.getAttribute("href");
+            const segments = href.split("/");
+            const modName = segments[segments.length - 1];
+            return modName;
+        });
+    };
+
+    const displayResults = (categories) => {
+        const resultsDiv = document.getElementById("results");
+        resultsDiv.innerHTML = "";
+
+        for (const [category, mods] of Object.entries(categories)) {
+            const categoryDiv = document.createElement("div");
+            categoryDiv.innerHTML = `
+                <h3>${category}</h3>
+                <p class="category-description">${categoryDescriptions[category]}</p>
+            `;
+
+            const ul = document.createElement("ul");
+
+            mods.forEach((mod) => {
+                const li = document.createElement("li");
+                li.textContent = mod;
+                ul.appendChild(li);
+            });
+
+            categoryDiv.appendChild(ul);
+            resultsDiv.appendChild(categoryDiv);
+        }
+    };
+
+    const loadConfig = async () => {
+        try {
+            const response = await fetch("config.json");
+            if (!response.ok) throw new Error(`Failed to load config: ${response.statusText}`);
+            config = await response.json();
+            console.log("Config loaded:", config);
+        } catch (error) {
+            console.error(error);
+            alert("Failed to load configuration file.");
+        }
+    };
+
+    const processZipFile = async (file) => {
+        const zip = new JSZip();
+        try {
+            const zipContent = await zip.loadAsync(file);
+            const modlistFile = Object.keys(zipContent.files).find((fileName) =>
+                fileName.endsWith("modlist.html")
+            );
+
+            if (!modlistFile) {
+                alert("No modlist.html file found in the ZIP archive.");
+                return;
+            }
+
+            const htmlContent = await zip.file(modlistFile).async("string");
+            const mods = parseModlist(htmlContent);
+            const categories = categorizeMods(mods);
+            displayResults(categories);
+        } catch (error) {
+            console.error("Error processing ZIP file:", error);
+            alert("Failed to process the ZIP file.");
+        }
+    };
+
+    document.getElementById("fileInput").addEventListener("change", (event) => {
+        const file = event.target.files[0];
+        if (file) {
+            processZipFile(file);
+        }
+    });
+
+    window.onload = loadConfig;
+</script>
+
 </body>
 
 </html>
