--- a/index.html
+++ b/index.html
@@ -34,91 +34,93 @@
 
     const simplifyName = (name) => name.toLowerCase().replace(/[^a-z0-9]/g, "").trim();
 
-    const categorizeMods = (mods) => {
-        const categories = {
-            Known: [],
-            "High Probability": [],
-            "Medium Probability": [],
-            "Low Probability": [],
-            Unknown: [],
-            Not: [],
-        };
+const categorizeMods = (mods) => {
+    const categories = {
+        Known: [],
+        "High Probability": [],
+        "Medium Probability": [],
+        "Low Probability": [],
+        Unknown: [],
+        Not: [],
+    };
 
-        mods.forEach((mod) => {
-            const simplifiedName = simplifyName(mod);
-            let categorized = false;
+    mods.forEach((mod) => {
+        const simplifiedName = simplifyName(mod.href); // Use href for categorization
+        let categorized = false;
 
-            // Check Known first
-            if (config.Known.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                categories["Known"].push(mod);
-                categorized = true;
-            }
+        // Check Known first
+        if (config.Known.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+            categories["Known"].push(mod);
+            categorized = true;
+        }
 
-            // Check Not next
-            if (!categorized && config.Not.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                categories["Not"].push(mod);
-                categorized = true;
-            }
+        // Check Not next
+        if (!categorized && config.Not.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+            categories["Not"].push(mod);
+            categorized = true;
+        }
 
-            // Check other categories only if not already categorized
-            if (!categorized) {
-                for (const [category, keywords] of Object.entries(config)) {
-                    if (category === "Known" || category === "Not") continue;
-                    if (keywords.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
-                        const displayCategory =
-                            category === "High" || category === "Medium" || category === "Low"
-                                ? `${category} Probability`
-                                : category;
-                        categories[displayCategory].push(mod);
-                        categorized = true;
-                        break;
-                    }
+        // Check other categories only if not already categorized
+        if (!categorized) {
+            for (const [category, keywords] of Object.entries(config)) {
+                if (category === "Known" || category === "Not") continue;
+                if (keywords.some((keyword) => simplifiedName.includes(simplifyName(keyword)))) {
+                    const displayCategory =
+                        category === "High" || category === "Medium" || category === "Low"
+                            ? `${category} Probability`
+                            : category;
+                    categories[displayCategory].push(mod);
+                    categorized = true;
+                    break;
                 }
             }
-
-            // If no match, add to Unknown
-            if (!categorized) {
-                categories["Unknown"].push(mod);
-            }
-        });
-
-        return categories;
-    };
-
-    const parseModlist = (fileContent) => {
-        const parser = new DOMParser();
-        const doc = parser.parseFromString(fileContent, "text/html");
-        return Array.from(doc.querySelectorAll("li a")).map((a) => {
-            const href = a.getAttribute("href");
-            const segments = href.split("/");
-            const modName = segments[segments.length - 1];
-            return modName;
-        });
-    };
-
-    const displayResults = (categories) => {
-        const resultsDiv = document.getElementById("results");
-        resultsDiv.innerHTML = "";
-
-        for (const [category, mods] of Object.entries(categories)) {
-            const categoryDiv = document.createElement("div");
-            categoryDiv.innerHTML = `
-                <h3>${category}</h3>
-                <p class="category-description">${categoryDescriptions[category]}</p>
-            `;
-
-            const ul = document.createElement("ul");
-
-            mods.forEach((mod) => {
-                const li = document.createElement("li");
-                li.textContent = mod;
-                ul.appendChild(li);
-            });
-
-            categoryDiv.appendChild(ul);
-            resultsDiv.appendChild(categoryDiv);
         }
-    };
+
+        // If no match, add to Unknown
+        if (!categorized) {
+            categories["Unknown"].push(mod);
+        }
+    });
+
+    return categories;
+};
+
+
+const parseModlist = (fileContent) => {
+    const parser = new DOMParser();
+    const doc = parser.parseFromString(fileContent, "text/html");
+
+    // Extract both href and inner text
+    return Array.from(doc.querySelectorAll("li a")).map((a) => ({
+        href: a.getAttribute("href"), // The mod URL
+        prettyName: a.textContent.trim(), // The displayed name
+    }));
+};
+
+const displayResults = (categories) => {
+    const resultsDiv = document.getElementById("results");
+    resultsDiv.innerHTML = "";
+
+    for (const [category, mods] of Object.entries(categories)) {
+        const categoryDiv = document.createElement("div");
+        categoryDiv.innerHTML = `
+            <h3>${category}:</h3>
+            <p class="category-description">${categoryDescriptions[category]}</p>
+        `;
+
+        const ul = document.createElement("ul");
+
+        mods.forEach((mod) => {
+            const li = document.createElement("li");
+            li.textContent = mod.prettyName; // Display the pretty name
+            ul.appendChild(li);
+        });
+
+        categoryDiv.appendChild(ul);
+        resultsDiv.appendChild(categoryDiv);
+    }
+};
+
 
     const loadConfig = async () => {
         try {
