fixed input and added more to the config

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Mod Categorizer</h1>
     <p>Upload the <strong>.zip</strong> file from any CurseForge modpack to narrow down what mods are client-sided:</p>
-    <input type="file" id="fileInput" accept=".html" />
+    <input type="file" id="fileInput" accept=".zip" />
     <div id="results"></div>
 
     <footer>
