--- a/index.html
+++ b/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mod Categorizer</title>
-    <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mod Categorizer</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <h1>Mod Categorizer</h1>
-    <p>Upload the <strong>.zip</strong> file from any CurseForge modpack to narrow down what mods are client-sided:</p>
-    <input type="file" id="fileInput" accept=".zip" />
-    <div id="results"></div>
+  <h1>Mod Categorizer</h1>
+  <p>Upload the <strong>.zip</strong> file from any CurseForge modpack to narrow down what mods are client-sided:</p><input type="file" id="fileInput" accept=".zip">
+  <div id="results"></div>
+  <footer>
+    Built with <span>♥</span> for Minecraft modders. <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a>
+  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script> 
+  <script>
 
-    <footer>
-        Built with <span>&hearts;</span> for Minecraft modders. 
-        <a href="https://github.com/CamoMano/modscanner-site">View on GitHub</a>
-    </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-<script>
     let config = {};
 
     const categoryDescriptions = {
@@ -34,7 +30,7 @@
 
     const simplifyName = (name) => name.toLowerCase().replace(/[^a-z0-9]/g, "").trim();
 
-const categorizeMods = (mods) => {
+  const categorizeMods = (mods) => {
     const categories = {
         Known: [],
         "High Probability": [],
@@ -83,10 +79,10 @@ const categorizeMods = (mods) => {
     });
 
     return categories;
-};
+  };
 
 
-const parseModlist = (fileContent) => {
+  const parseModlist = (fileContent) => {
     const parser = new DOMParser();
     const doc = parser.parseFromString(fileContent, "text/html");
 
@@ -95,9 +91,9 @@ const parseModlist = (fileContent) => {
         href: a.getAttribute("href"), // The mod URL
         prettyName: a.textContent.trim(), // The displayed name
     }));
-};
+  };
 
-const displayResults = (categories) => {
+  const displayResults = (categories) => {
     const resultsDiv = document.getElementById("results");
     resultsDiv.innerHTML = "";
 
@@ -127,7 +123,7 @@ const displayResults = (categories) => {
         categoryDiv.appendChild(ul);
         resultsDiv.appendChild(categoryDiv);
     }
-};
+  };
 
 
 
@@ -174,8 +170,6 @@ const displayResults = (categories) => {
     });
 
     window.onload = loadConfig;
-</script>
-
+  </script>
 </body>
-
 </html>
