--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mod Categorizer</title>
+  <title>MC Mod Scanner</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-  <h1>Mod Categorizer</h1>
+  <h1>MC Mod Scanner</h1>
   <p>Upload the <strong>.zip</strong> file from any CurseForge modpack to narrow down what mods are client-sided:</p><input type="file" id="fileInput" accept=".zip">
   <div id="results"></div>
   <footer>
